# asam-osi-converter

./: .gitignore  CHANGELOG.md  config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yaml
flask-logging-server/: README.md  pyproject.toml
flask-logging-server/flask-logging-server/: app.py  check_json.py
foxglove/: ArrowPrimitive.ts  CameraCalibration.ts  CircleAnnotation.ts  Color.ts  CompressedImage.ts  CompressedVideo.ts  CubePrimitive.ts  CylinderPrimitive.ts  FrameTransform.ts  FrameTransforms.ts  GeoJSON.ts  Grid.ts  ImageAnnotations.ts  KeyValuePair.ts  LaserScan.ts  LinePrimitive.ts  LocationFix.ts  Log.ts  ModelPrimitive.ts  PackedElementField.ts  Point2.ts  Point3.ts  PointCloud.ts  PointsAnnotation.ts  Pose.ts  PoseInFrame.ts  PosesInFrame.ts  Quaternion.ts  RawImage.ts  SceneEntity.ts  SceneEntityDeletion.ts  SceneUpdate.ts  SpherePrimitive.ts  TextAnnotation.ts  TextPrimitive.ts  TriangleListPrimitive.ts  Vector2.ts  Vector3.ts
google/protobuf/: duration.ts  timestamp.ts
proto/: generate_ts_proto.sh
src/: index.ts
src/config/: colors.ts  entityPrefixes.ts  frameTransformNames.ts
src/converters/: index.ts
src/converters/groundTruth/: context.ts  frameTransformConverter.ts  index.ts  sceneUpdateConverter.ts  types.ts
src/converters/sensorData/: index.ts  sceneUpdateConverter.ts
src/converters/sensorView/: sceneUpdateConverter.ts
src/panel/: OSIPanel.tsx  OSIPanelElement.tsx
src/utils/: geometry.ts  helper.ts  marker.ts  scene.ts
tests/: index.spec.ts  trafficlights.spec.ts  trafficsigns.spec.ts
(+12 files in other folders)
